right aligned all of the submit / cancel buttons and swapped the position of each ( submit button now to the right of the cancel link ). Also added some padding to the forgot password table to space things out a little. Fixes #532

--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -317,6 +317,10 @@ table.forgot-password th {
     text-align:right;
 }
 
+table.forgot-password td, th {
+    padding: 5px 0 5px 0;
+}
+
 ul.error {
     margin-bottom:.5em;
     font-weight:bold;
