--- a/media/css/lightbox.css
+++ b/media/css/lightbox.css
@@ -39,7 +39,7 @@
 }
 
 .lightbox-pad .submit, .create-tag-lightbox .submit  {
-    text-align: center;
+    text-align: right;
 }
 
 #lightbox .lightbox-content .create-tag-lightbox th  {
